@@ -440,14 +440,6 @@ editor/pasm.el                                    [devel]
 editor/pasm.vim                                   [devel]
 editor/pir-mode.el                                [devel]
 editor/pmc.vim                                    [devel]
-encodings/fixed_8.c                               []
-encodings/fixed_8.h                               []
-encodings/ucs2.c                                  []
-encodings/ucs2.h                                  []
-encodings/utf16.c                                 []
-encodings/utf16.h                                 []
-encodings/utf8.c                                  []
-encodings/utf8.h                                  []
 examples/README                                   [main]doc
 examples/benchmarks/addit.imc                     [main]doc
 examples/benchmarks/addit.pasm                    [main]doc
@@ -1741,6 +1733,14 @@ src/charset/tables.c                              []
 src/charset/tables.h                              []
 src/charset/unicode.c                             []
 src/charset/unicode.h                             []
+src/encodings/fixed_8.c                           []
+src/encodings/fixed_8.h                           []
+src/encodings/ucs2.c                              []
+src/encodings/ucs2.h                              []
+src/encodings/utf16.c                             []
+src/encodings/utf16.h                             []
+src/encodings/utf8.c                              []
+src/encodings/utf8.h                              []
 t/README                                          []
 t/benchmarks.t                                    []
 t/compilers/imcc/imcpasm/cfg.t                    []
